--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
     "react-simple-star-rating": "^5.1.7",
+    "react-toastify": "^9.1.1",
     "sass": "^1.58.0",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
